Image node on linked and localized material loses image after reopening project. #47121

Closed
opened 2016-01-05 10:43:50 +01:00 by Siim Raidma · 6 comments

Occurs on several systems.

Blender v2.76b f337fea

Image node on linked and localized material loses image after reopening project.

Steps to reproduce:

  1. Create a .blend with a material that includes an image node.
  2. Create a .blend file and link the material from previous file. Open material in Node Editor. Material's image node looks as follows:
    2016-01-05_11-19-00.png
  3. Make material local using the arrow button next to material field. Material's image node looks as follows:
    2016-01-05_11-19-34.png
  4. Save and revert/reload project. Material's image node looks as follows:
    2016-01-05_11-19-56.png

Looking at Datablocks, it seems like upon saving blender discards the linked image despite of it having 1 user.

Occurs on several systems. Blender v2.76b f337fea Image node on linked and localized material loses image after reopening project. Steps to reproduce: 1. Create a .blend with a material that includes an image node. 2. Create a .blend file and link the material from previous file. Open material in Node Editor. Material's image node looks as follows: ![2016-01-05_11-19-00.png](https://archive.blender.org/developer/F271595/2016-01-05_11-19-00.png) 3. Make material local using the arrow button next to material field. Material's image node looks as follows: ![2016-01-05_11-19-34.png](https://archive.blender.org/developer/F271597/2016-01-05_11-19-34.png) 4. Save and revert/reload project. Material's image node looks as follows: ![2016-01-05_11-19-56.png](https://archive.blender.org/developer/F271599/2016-01-05_11-19-56.png) Looking at Datablocks, it seems like upon saving blender discards the linked image despite of it having 1 user.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @kuubaas

Added subscriber: @kuubaas
Member

Added subscriber: @scorpion81

Added subscriber: @scorpion81
Member

Just tested in both 2.76.5 master and 2.76b, both show same behavior. As workaround, you could try to link the image datablock as well.
If you then link the material datablock as you described, and make it local, the image datablock is no longer an indirectly linked datablock.
It will become directly linked (according to tooltip) and then will "survive" the next save / load step.
But... i am also not sure whether its intentional not to link associated images automatically with the material datablocks.

Just tested in both 2.76.5 master and 2.76b, both show same behavior. As workaround, you could try to link the image datablock as well. If you then link the material datablock as you described, and make it local, the image datablock is no longer an indirectly linked datablock. It will become directly linked (according to tooltip) and then will "survive" the next save / load step. But... i am also not sure whether its intentional not to link associated images automatically with the material datablocks.
Bastien Montagne self-assigned this 2016-01-05 14:26:33 +01:00

This issue was referenced by 9691202585

This issue was referenced by 969120258532b3a261d42eac9092f2bdfee5cd5f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47121
No description provided.